kube/campusdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finalappcampus
  namespace: kalin-final-campus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finalappcampus
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: finalappcampus
    spec:
      containers:
        - name: finalappcampus
          image: kalinatsnow/finalapp:${IMAGE_TAG}
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
