kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finalapp
  namespace: kalin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finalapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: finalapp
    spec:
      containers:
      - name: finalapp
        image: kalinatsnow/finalapp:${IMAGE_TAG}
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
