kube/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: finalappsvc
  namespace: kalin
spec:
  selector:
    app: finalapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
