kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: card-app-ingress
  namespace: kalin
spec:
  rules:
  - host: finalapp.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finalappsvc
            port:
              number: 80
